--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Hello GIT2</h1>
+    <input type="text">
+    <input type="checkbox">
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <button type="submit">submit</button>
 </body>
 </html>
