--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Hello GIT2</h1>
+    <ul>
+        <li><a href="page1.html"></a></li>
+        <li><a href="page2.html"></a></li>
+        <li><a href="page3.html"></a></li>
+    </ul>
 </body>
 </html>
